# fnd

./: .gitignore  LICENCE  README.md  environment.yml  main.py  pyproject.toml
GPM/: da.py  gpm_main.py  main.py
GPM/data/: data_loader.py  news_data_loader.py  pyg_data_loader.py
GPM/data/dataset/: attributed_graph_dataset.py  heterophily_graph_dataset.py  transfer_learning_citation_dataset.py  zinc_dataset.py
GPM/model/: __init__.py  agent.py  agent_utils.py  encoder.py  environment.py  model.py  random_walk.py
GPM/task/: graph.py
GPM/utils/: args.py  early_stop.py  eval.py  logger.py  scheduler.py  sys.py  utils.py
config/: da.yaml  data.yaml  main.yaml
patterns/: README.md
patterns/politifact/128_8_1_0.1/: eid.pt  nid.pt  ptn.pt
patterns/politifact/128_8_1_0.1/report_graph_0/: heatmap_local_walk.txt  heatmap_transition.txt  pattern_table.csv  report.md  summary.json
patterns/politifact/256_4_4_1/: eid.pt  nid.pt  ptn.pt
scripts/: build_early_detection_dataset.py  cluster.py  count_empty_time.py  visualize_early_graph_compare.py  visualize_news_patterns.py
visualizations/cluster_compression/politifact/graph_0/: ts_k32.npz
visualizations/cluster_compression/politifact/graph_126/: none_k40.npz  ts_k30.npz
visualizations/cluster_compression/politifact/graph_210/: ts_k4.npz
visualizations/cluster_compression/politifact/graph_310/: ts_k50.npz  ts_k57.npz
